package interfaces

interface Liquidable {
    // Atributos
    var liquidada:Boolean
    // Métodos
    abstract fun liquidar()
}